[gd_scene load_steps=2 format=3 uid="uid://dnwagbh25fp40"]

[ext_resource type="Script" path="res://Assets/Items/Spawnable Items/spawn_rambutan.gd" id="1_uhnbw"]

[node name="spawn_rambutan" type="Node2D"]
script = ExtResource("1_uhnbw")

[node name="Timer" type="Timer" parent="."]
wait_time = 100.0
autostart = true

[node name="spawn_area" type="ReferenceRect" parent="."]
offset_right = 64.0
offset_bottom = 64.0

[node name="rambutan_spawn" type="Node2D" parent="."]

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
